2009-12-10  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclBasic.c: small cleanup

	* generic/tclExecute.c: fix panic in http11.test caused by buggy
	earlier commits in coroutine management.

2009-12-10  Andreas Kupries  <andreask@activestate.com>

	* generic/tclObj.c (TclContinuationsEnter): [Bug 2895323]: Updated
	comments to describe when the function can be entered for the same
	Tcl_Obj* multiple times. This is a continuation of the 2009-11-10
	entry where a memory leak was plugged, but where not sure if that
	was just a band-aid to paper over some other error. It isn't, this
	is a legal situation.

2009-12-10  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclBasic.c:   Reducing the # of moving parts for
	* generic/tclExecute.c: coroutines by delegating more to tebc;
	eliminate the special coroutine CallFrame.

2009-12-09  Andreas Kupries  <andreask@activestate.com>

	* generic/tclIO.c: [Bug 2901998]: Applied Alexandre Ferrieux's
	patch fixing the inconsistent buffered I/O. Tcl's I/O now flushes
	buffered output before reading, discards buffered input before
	writing, etc.

2009-12-09  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclBasic.c:   Insure correct lifetime of varFrame's
	(objc,objv)for coroutines.
	
	* generic/tclExecute.c: Code regrouping

2009-12-09  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tclBasic.c: Added some of the missing setting of errorcode
	values.

2009-12-08  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclExecute.c (TclStackFree): Improved panic msg

2009-12-08  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclBasic.c:   Partial nre-enabling of coroutines.
	* generic/tclExecute.c: The initial call still requires its
	* generic/tclInt.h:     own instance of tebc, but on resume coros
	can execute in the caller's tebc.

	* generic/tclExecute.c (TEBC): silence warning about pcAdjustment

2009-12-08  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tclExecute.c (TclExecuteByteCode): Make the dict opcodes